<resources>
    <string name="app_name">DSTA</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string name="facebook_app_id">413730270506623</string>
    <string name="fb_login_protocol_scheme">fb413730270506623</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--Navigation-->
    <string name="name_home">fragment home</string>
    <string name="name_profile">fragment profile</string>

    <!--Register-->
    <string name="email">Email</string>
    <string name="password">Password(Min. 7 character)</string>
    <string name="confpassword">Confirm password</string>
    <string name="login">SIGNED</string>
    <string name="don_t_have_an_account_sign_in">Already have a account? Login</string>
    <string name="title_activity_maps">MapsActivity</string>

    <!--Menu home-->
    <string name="ubication">La ubicación de...</string>
    <string name="recordatorio">Recordatorios</string>

    <!--Drawer-->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


</resources>